--- a/cmd/web-app/templates/content/waec-neco-prep.html
+++ b/cmd/web-app/templates/content/waec-neco-prep.html
@@ -22,6 +22,7 @@
       <div class="col-md-12 text-center">
           <hr class="mt-5"/>
                       <h2 class="d-none d-md-block mt-5">Register For Our Intensive WAEC/NECO preparatory classes</h2>
+                      <p data-target="root.message" class="text-danger"></p>
                       <form method="post" data-action="submit->root#getStarted">
                         <input type="hidden" name="class" data-target="root.class" value="014b663d-37e3-4e1e-95e0-cbfaf7e63675">
                           <div class="form-row">
