--- a/cmd/web-app/templates/layouts/dtox.html
+++ b/cmd/web-app/templates/layouts/dtox.html
@@ -78,21 +78,14 @@
       <div class="collapse navbar-collapse text-center" id="navbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link {{block "homeActive" .}}{{end}}" href="/">Home</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link {{block "aboutActive" .}}{{end}}" href="/about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link page-scroll" href="/#pricing">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {{block "contactActive" .}}{{end}}" href="/contact">Contact</a>
+            <a class="nav-link" href="/user/login">Login</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://forms.gle/xgnAREA3fByZYKuc6" target="_blank">Career</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="/user/login">Login</a></li>
 
         </ul>
         <a href="/#free-lessons" class="btn btn-primary ml-lg-3 primary-shadow">Try Free</a>
