Resend welcome email

--- a/cmd/web-app/templates/content/users-view.gohtml
+++ b/cmd/web-app/templates/content/users-view.gohtml
@@ -44,6 +44,7 @@
                             <a href="{{ .urlUserVirtualLogin }}" class="dropdown-item">Virtual Login</a>
 
                             <form method="post"><input type="hidden" name="action" value="archive" /><input type="submit" value="Archive User"  class="dropdown-item"></form>
+                            <form method="post"><input type="hidden" name="action" value="resend_welcome_email" /><input type="submit" value="Resend Welcome Email"  class="dropdown-item"></form>
                         {{ end }}
                     {{ end }}
 
