Direct login after registration

--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -11,9 +11,16 @@
 
 {{ if .isNew}}
 <div class="alert alert-success mt-2 mb-3" role="alert">
-  Congratulations! Check the timetable below for the date and time of your lesson. <br>
+  <p>Congratulations! Check the timetable below for the date and time of your lesson.</p>
 </div>
 {{ end }}
+<div class="mb-2">
+  <p>Click on this button to install MS Team on your android phone so as to be able to join the classes<br/>
+    <a class="btn btn-primary" href="{{.teamLink}}">Install Ms Team</a></p>
+    <p>If you have any issue, you chat with us on whatsapp <br/>
+      <a href="{{ .whatsAppLink }}" class="btn btn-success">Get Help on Whatsapp</a>
+    </p>
+</div>
 
 <div class="row">
   <div class="col">
@@ -28,7 +35,7 @@
         </p>
         {{ end }} 
 
-        <p>
+        <p class="d-none">
           {{ if isWorkHour }}
           Enter the virtual class room to see how it works <br>
           <a href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NDdmNTkyZjUtZDRkZC00N2YzLWE0YjItYjFhMjkxYzcwYzY1%40thread.v2/0?context=%7b%22Tid%22%3a%223169d2a2-b883-4e7d-9efd-b54ca503d9b7%22%2c%22Oid%22%3a%223b3673f8-b3c4-4338-9391-3bf7682449a4%22%7d" 
