--- a/cmd/web-app/templates/content/dtox-index.html
+++ b/cmd/web-app/templates/content/dtox-index.html
@@ -20,11 +20,11 @@ affordable interactive online private teaching and learning.{{end}}
       </div>
     </div>
 
-    <div id="free-lessons" class="row">
+    <div id="get-started" class="row">
       <div class="col-md-12 text-center">
           <hr class="mt-5"/>
-                      <h2 class="d-none d-md-block mt-5">Register For Our Free Lessons</h2>
-                      <p>No commitment required. Get enrolled to join our next free classes and see for yourself</p>
+                      <h2 class="d-none d-md-block mt-5">Register and Start Learning</h2>
+                      <p>Fill the form below, we will reach out to you to discuss your unique need</p>
                       <form method="post" data-action="submit->root#getStarted">
                         <div class="form-row">
                           <p data-target="root.message" class="text-danger"></p>
