--- a/cmd/web-app/templates/layouts/dtox.html
+++ b/cmd/web-app/templates/layouts/dtox.html
@@ -85,7 +85,7 @@
           </li>
 
         </ul>
-        <a href="/#free-lessons" class="btn btn-primary ml-lg-3 primary-shadow">Try Free</a>
+        <a href="/#get-started" class="btn btn-primary ml-lg-3 primary-shadow">Get Started</a>
       </div>
     </nav>
   </div>
